--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "grunt-project-template",
-  "version": "4.0.0",
+  "name": "ols",
+  "version": "0.0.1",
   "license": "MIT",
-  "description": "Template for frontend developer base on Grunt",
+  "description": "Online learning system",
   "dependencies": {
     "grunt": "^0.4.5",
     "grunt-autoprefixer": "^1.0",
@@ -23,13 +23,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/tsergeytovarov/grunt-project.git"
+    "url": "https://github.com/tsergeytovarov/ols"
   },
   "author": "Sergey Popov <tovarov.piter@gmail.com>",
   "bugs": {
-    "url": "https://github.com/tsergeytovarov/grunt-project/issues"
+    "url": "https://github.com/tsergeytovarov/ols/issues"
   },
-  "homepage": "https://github.com/tsergeytovarov/grunt-project",
+  "homepage": "https://github.com/tsergeytovarov/ols",
   "devDependencies": {
   }
 }
