--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "grunt-html": "^5.0.1",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-include-replace": "^3.2.0",
-    "load-grunt-tasks": "^3.0.0"
+    "load-grunt-tasks": "^3.0.0",
+    "grunt-svgmin": "^3.1.2"
   },
   "repository": {
     "type": "git",
